# MedAgent

./: .gitignore  LICENSE  README.md  start.sh
backend/: README.md  pyproject.toml
backend/src/: app.py
backend/src/app/: main.py
backend/src/app/api/routes/: auth.py  keycloak_callback.py  pdf_files.py  users.py
backend/src/app/core/: config.py  security.py
backend/src/app/crud/: user.py
backend/src/app/db/: base.py  session.py
backend/src/app/models/: user.py
backend/src/app/schemas/: user.py
backend/tests/: test_auth.py
docker/: docker-compose.yml  docker-compose_simple.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/keycloak/: Dockerfile  README_zh_CN.md
docs/: Github_Team_Guidelines_CN-Zh.md
frontend/: README.md  SetupGuide.md  next.config.js  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
frontend/.storybook/: main.ts
frontend/docs/: ComponentOverview.md  SetupGuide.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/components/: Sidebar.tsx  TopNav.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/hoc/: withRole.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/studio/: page.tsx
frontend/src/app/styles/: globals.css
frontend/src/auth/: AuthContext.tsx  withRole.tsx
frontend/src/components/chat/: Live2DWidget.tsx
frontend/src/i18n/: README.md  index.ts  settings.ts
frontend/src/styles/: additional_styles.css  colors.js
frontend/src/types/: PropTypes.ts  pdf.d.ts
(+38 files in other folders)
