[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medagent"
version = "0.1.0"
description = "MedAgent: Medical Guidelines Recommendation System Based on Retrieval Augmented Retrieval and Agentic AI Workflows"
authors = [
    { name = "Mou YongLi", email = "mou@dbis.rwth-aachen.de" },
    { name = "Meret Unbehaun" },
    { name = "Saif Nasir" },
    { name = "Nadine Önelmis" },
    { name = " Behrus Puladi" },
    { name = "Stefan Decker" }
]
license = { text = "MIT" }
readme = "README.md"  # Optional
requires-python = ">=3.10"  # Adjust as needed
urls = { "Homepage" = "https://github.com/MouYongli/MedAgent" }
classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "pydantic[email]",
    "passlib[bcrypt]",
    "python-jose[cryptography]"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


